# pdqhash-python

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: ci.yaml
include/: patches.h
pdqhash/: __init__.py  _version.py  bindings.pyx
tests/: test_compute.py
tests/images/: README.md
