[pylint]
extension-pkg-whitelist = cv2,pdqhash.bindings
disable = C0111

[metadata]
name = pdqhash
author = Fausto Morales
author_email = faustomorales@gmail.com
description = Python bindings for Facebook's PDQ hash
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faustomorales/pdqhash-python
version = 0.1.3
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = True
setup_requires =
    cython
    numpy

[tool:pytest]
filterwarnings =
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working:DeprecationWarning
norecursedirs = ThreatExchange