[pylint]
extension-pkg-whitelist = cv2,pdqhash.bindings
disable = C0111

[metadata]
name = pdqhash
author = Fausto Morales
author_email = faustomorales@gmail.com
description = "Python bindings for Facebook's PDQ hash"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faustomorales/pdqhash-python
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = True
setup_requires =
    cython
    numpy >= 1.26.0

[options.packages.find]
exclude = tests


[tool:pytest]
filterwarnings =
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working:DeprecationWarning
norecursedirs = ThreatExchange

[versioneer]
VCS = git
style = pep440-old
versionfile_source = pdqhash/_version.py
versionfile_build = pdqhash/_version.py
tag_prefix = v
